--- a/lucky-dish-website/styles/globals.css
+++ b/lucky-dish-website/styles/globals.css
@@ -1,11 +1,11 @@
 :root {
-  --background: #ffffff;
+  --background: #2A4E6C;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #2A4E6C;
     --foreground: #ededed;
   }
 }
