Added link routing to MenuItem.js and allowed routing access via [id].js to display pages of all recipes. Added to recipes.js to allow search via an id rather than only query, this enabled page routing by id for each recipe page. Added minimal styling to [id] for new pages to be similar to rest of project. Slight amend on index.js to change name to title for code consistency. Created RecipePage module styling for the [id] route links

--- a/lucky-dish-website/styles/globals.css
+++ b/lucky-dish-website/styles/globals.css
@@ -1,11 +1,11 @@
 :root {
-  --background: #2A4E6C;
+  --background: #2a4e6c;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #2A4E6C;
+    --background: #2a4e6c;
     --foreground: #ededed;
   }
 }
